Pricing plans area

--- a/app/views/content/support_plans.html.erb
+++ b/app/views/content/support_plans.html.erb
@@ -1,8 +1,12 @@
+<div id='page-title'>
+  <h2>Support Plans</h2>
+</div>
+
+<div id="wrapper" class="full">
 	<div class="row-fluid">
-		<div class="span8">
-			<h1>
-				Support Plans
-			</h1>
+		<div class="span8 separate">
+
+			<h3>Plans</h3>
 			<p class="lead">
 				These plans are paid quarterly or yearly.  All unused time from the "<a href="#ydig">Your discount IT Guy plan</a>" will be added on to the next month or quarter.<a href="#1"><small>[1]</small></a>
 			</p>
@@ -74,8 +78,8 @@ For example if you have 4 hours remaining for quarter 1 and you enter quarter 2 
 </p>
 
 </div>
-		<div class="span4">
 
+		<div class="span4 sidebar">
 			<h3>
 				The Plans!
 			</h3>
@@ -141,3 +145,4 @@ For example if you have 4 hours remaining for quarter 1 and you enter quarter 2 
 			</table>
 		</div>
 	</div>
+</div>
