JS fix on the image path

--- a/app/views/content/about.html.erb
+++ b/app/views/content/about.html.erb
@@ -61,6 +61,8 @@
 
 				<div class="site">http://www.acm-ne.org<i class="halflings-icon star"></i><span class="js"></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
 
+				<div class="site">http://signaturesounds.com/<i class="halflings-icon star"></i><span class="js"></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div><span class=notactive></span></div>
+
 				<div class="site">http://www.ophthalmicedge.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
 
 				<div class="site">http://fieldeddy.com<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
