--- a/app/views/projects/_projects-bottom.html.erb
+++ b/app/views/projects/_projects-bottom.html.erb
@@ -2,7 +2,7 @@
 	<% @projects.each do |project| %>
 	  <div class="span3 item">
 	  	<div class="picture">
-	    	<%= link_to image_tag(project.photo.url(:medium)), project_path(project.id), :class => "image proj-#{project.id}" %>
+	    	<%= link_to image_tag(project.photo.url(:medium)), project_path(project.id), :class => "image proj-#{project.id}", :data => { :url => project.photo.url(:large) } %>
 	    <div class="description">
 	    	<p>
 				<%= simple_format strip_tags(truncate(@projectFull.body, :length => 200, :omission => "... (more)")) %>
