--- a/app/views/content/about.html.erb
+++ b/app/views/content/about.html.erb
@@ -3,6 +3,7 @@
 </div>
 
 <div id="wrapper" class="full">
+
 	<div class="row-fluid">
 		<div class="span12">
 
@@ -20,81 +21,21 @@
 				</ul>
 			</p>
 		</div>
-	</div>
+	</div> <!--end top row-->
+
+
 	<div class="row-fluid">
 	 	<div class="span8 separate">
-
 			<h2>Sites</h2>
-
 			<p>
 				<span class="dropcap">Y</span>ou can see a long list of sites below that I have built alone or with a team, some of which I also managed.
 			</p>
 			<div class="sites">
-				<div class="site">http://www.campusservices.harvard.edu<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
 
-				<div class="site">http://fibermark.com<i class="halflings-icon star"></i><span class="js"></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon user"></i></div>
+			 <%= render 'sites' %>	
 
-				<div class="site">http://activelivingresearch.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
 
-				<div class="site">http://digitalshingle.mit.edu<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
 
-				<div class="site">http://speakers.drsforamerica.org<i class="halflings-icon star"></i><i class="halflings-icon eye-open"></i><i class="halflings-icon user"></i><i class="halflings-icon tag"></i>
-				</div>
-
-				<div class="site">http://www.law.uconn.edu<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
-
-				<div class="site">http://www.fullercenter.org<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
-
-				<div class="site">http://science.mit.edu<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
-
-				<div class="site">http://americanrepertorytheater.org<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
-
-				<div class="site">http://alfrednutile.info<i class="halflings-icon star"></i><span class="js"></span><i class="halflings-icon eye-open"></i><i class="halflings-icon certificate"></i></div>
-
-				<div class="site">http://burnesscommunications.com<i class="halflings-icon cog"></i><span class="js"></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
-
-				<div class="site">http://www.vtinvasives.org<i class="halflings-icon star"></i><span class="js"></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
-
-				<div class="site">http://alumni.williams.edu<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
-
-				<div class="site">http://ohionet.org<i class="halflings-icon star"></i></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
-
-				<div class="site">http://www.acm-ne.org<i class="halflings-icon star"></i><span class="js"></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
-
-				<div class="site">http://signaturesounds.com/<i class="halflings-icon star"></i><span class="js"></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div><span class=notactive></span></div>
-
-				<div class="site">http://www.ophthalmicedge.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
-
-				<div class="site">http://fieldeddy.com<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
-
-				<div class="site">http://www.myersinfosys.com<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
-
-				<div class="site">http://www.chroma.com<i class="halflings-icon cog"></i><span class="js"></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
-
-				<div class="site">http://clpp.hampshire.edu/<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><span class=notactive></span></div>
-
-				<div class="site">http://drupalcampma.com<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
-
-				<div class="site">http://www.gaiauniversity.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><span class="js"></span><i class="halflings-icon certificate"></i><span class=notactive></span></div>
-
-				<div class="site">http://www.rfc.org <i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
-
-				<div class="site">http://leaderresource.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><span class="js"></span><i class="halflings-icon certificate"></i><span class=notactive></span></div>
-
-				<div class="site">http://nationalpriorities.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><span class="js"></span><i class="halflings-icon certificate"></i><span class=notactive></span><span class=notactive></span></div>
-
-				<div class="site">http://www.real-user-monitoring.com<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
-
-				<div class="site">http://www.ctconservation.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><span class="js"></span><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
-
-				<div class="site">http://www.cradlefamily.com<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><span class="js"></span><i class="halflings-icon certificate"></i><span class=notactive></span><span class=notactive></span></div>
-				<div class="site">http://www.stopitnow.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><span class="js"></span><i class="halflings-icon certificate"></i><span class=notactive></span></div>
-
-				<div class="site">http://3blmedia.com<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><span class="js"></span><i class="halflings-icon certificate"></i><span class=notactive></span></div>
-
-				<h2>Soon to be released</h2>
-				<div class="site">http://uppd.alfrednutile.info<i class="halflings-icon star"></i><i class="halflings-icon eye-open"></i><i class="halflings-icon user"></i>
-				</div>
 			</div>
 		</div>
 		<div class="span4 sidebar">
@@ -103,6 +44,7 @@
 					<div><i class="halflings-icon star"></i>In on Full Build</div> 
 					<div><i class="halflings-icon cog"></i>Some Work</div>
 					<div><i class="halflings-icon stop"></i>PHP</div> 
+					<div><i class="halflings-icon leaf"></i>JavaScript</div>
 					<div><i class="halflings-icon eye-open"></i>Rails</div> 
 					<div><i class="halflings-icon certificate"></i>Drupal</div>  
 					<div><i class="halflings-icon user"></i>Front End</div> 
@@ -110,12 +52,14 @@
 					<div><i class="halflings-icon refresh"></i>No Longer Active</div>
 				</div>
 
-      <h3>More info</h3>
-      <h4>Resume</h4>
-      <p>
-        <i class="halflings-icon  user"></i><a href="https://dl.dropboxusercontent.comu/54803135/Resume.pdf" target="_blank">PDF Here</a></br>
-        <i class="halflings-icon  user"></i><a href="https://dl.dropboxusercontent.com/u/54803135/Resume.doc" target="_blank">DOC Here</a>
-      </p>
+			      <div class="more-info">
+				      	<h3>More info</h3>
+				      <h4>Resume</h4>
+				      <p>
+				        <i class="halflings-icon  user"></i><a href="https://dl.dropboxusercontent.comu/54803135/Resume.pdf" target="_blank">PDF Here</a></br>
+				        <i class="halflings-icon  user"></i><a href="https://dl.dropboxusercontent.com/u/54803135/Resume.doc" target="_blank">DOC Here</a>
+				      </p>
+				  </div>
 		</div>
 	</div>
 </div>
