Add quote block

--- a/app/views/content/about.html.erb
+++ b/app/views/content/about.html.erb
@@ -51,15 +51,17 @@
 					<div><i class="halflings-icon tag"></i>Project Manager</div> 
 					<div><i class="halflings-icon refresh"></i>No Longer Active</div>
 				</div>
-
-			      <div class="more-info">
-				      	<h3>More info</h3>
+				<hr>
+			    <div class="more-info">
+				      <h3>More info</h3>
 				      <h4>Resume</h4>
 				      <p>
 				        <i class="halflings-icon  user"></i><a href="https://dl.dropboxusercontent.comu/54803135/Resume.pdf" target="_blank">PDF Here</a></br>
 				        <i class="halflings-icon  user"></i><a href="https://dl.dropboxusercontent.com/u/54803135/Resume.doc" target="_blank">DOC Here</a>
 				      </p>
 				  </div>
+				<hr>
+      			<div><%= render 'shared/testimonies' %></div>
 		</div>
 	</div>
 </div>
