--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -23,29 +23,10 @@
 
   <!--end left side-->
     <div class="span3 sidebar">
-    <h3>Who?</h3>
-      <p>
-        <span class="dropcap">A</span>lfred Nutile
-      </p>
-      <p>
-        15+ years of experience in different technologies. 
-        <ul class="check_list">
-          <li>Linux</li>
-          <li>PHP</li>
-          <li>Rails</li>
-          <li>MySQL</li>
-          <li>Drupal</li>
-          <li>SysAdmin</li>
-          <li>LAMP</li>
-          <li>JS</li>
-          <li>jQuery</li>
-          <li>CSS</li>
-          <li>Consulting</li>
-          <li>Angular.js</li>
-          <li>etc..</li>
-        </ul>
-      </p>
-    </div> 
+      <div><%= render 'shared/who' %></div>
+      <hr>
+      <div><%= render 'shared/testimonies' %></div>
+    </div><!--end right sidebar--> 
   </div>
 
 </div>
