Add contract link and fonts

--- a/app/views/content/support_plans.html.erb
+++ b/app/views/content/support_plans.html.erb
@@ -143,6 +143,8 @@ For example if you have 4 hours remaining for quarter 1 and you enter quarter 2 
 
 				</tbody>
 			</table>
+			<h2>Checkout a Contract</h2>
+			<p><i class="fa-icon-edit"></i> <a href="https://docs.google.com/document/d/1iwQN0FZ5Pdmg8kYo23zsbU9R-sC7iB19kfmDjVkjiQE/edit?usp=sharing">Contract</a></li> </p>
 		</div>
 	</div>
 </div>
