--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -22,7 +22,10 @@
               <li>
                 <a href="/posts">Blog &amp; Things</a>
               </li>
-          </ul>
+              <li>
+                <a href="/support_plans">Support Plans</a>
+              </li>
+            </ul>
         </div> 
       </div>
     </div>
