--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -22,8 +22,15 @@
               <li>
                 <a href="/posts">Blog &amp; Things</a>
               </li>
-              <li>
-                <a href="/support_plans">Support Plans</a>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Support<b class="caret"></b></a>
+                  
+                  <ul class="dropdown-menu">
+                    <li><a href="/support_plans">Support Plans</a></li>
+                    <li><a href="https://alfrednutile.freshbooks.com/">Payments</a></li>
+                    <li><a href="https://www.pivotaltracker.com/signin">Project Managment</a></li>
+                    <li><a href="https://www.pivotaltracker.com/signin">Tickets</a></li>
+                </ul>
               </li>
             </ul>
         </div> 
