Bug on portfolio page

--- a/app/views/projects/_projects-top.html.erb
+++ b/app/views/projects/_projects-top.html.erb
@@ -7,7 +7,7 @@
                  <div class="span7 media-body">
                    <h4 class="media-heading"><%= @projectFull.title %></h4>
                   <p class="starting">
-                    <%= simple_format @projectFull.body %>
+                    <%= raw @projectFull.body %>
                   </p>
                  </div>
             </div>
