--- a/app/views/projects/_projects-bottom.html.erb
+++ b/app/views/projects/_projects-bottom.html.erb
@@ -5,7 +5,7 @@
 	    	<%= link_to image_tag(project.photo.url(:medium)), project_path(project.id), :class => "image proj-#{project.id}", :data => { :url => project.photo.url(:large) } %>
 	    <div class="description">
 	    	<p>
-				<%= simple_format strip_tags(truncate(@projectFull.body, :length => 200, :omission => "... (more)")) %>
+				<%= simple_format strip_tags(truncate(project.body, :length => 200, :omission => "... (more)")) %>
 	    	</p>
 	    </div>
 	  </div>
