--- a/app/views/content/_sites.html.erb
+++ b/app/views/content/_sites.html.erb
@@ -1,6 +1,6 @@
 <div class="site">http://www.campusservices.harvard.edu<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></i></div>
 
-<div class="site">http://fibermark.com<i class="halflings-icon star"></i><i class="halflings-icon leaf"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></i><i class="halflings-icon user"></i></div>
+<div class="site"><a href="/posts/4>Javascript/Jquery App</a><i class="halflings-icon star"></i><i class="halflings-icon leaf"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></i><i class="halflings-icon user"></i></div>
 
 <div class="site">http://activelivingresearch.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></i><i class="halflings-icon tag"></i></div>
 
