--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,13 @@
 <span class="span3">
     <address>
     <h3>Alfred Nutile</h3>
-      Leverett, MA<br>
       <abbr title="Phone">P:</abbr> (413) 345-5103
     </address>
   <address>
-    <a href="mailto:#">alfrednutile@gmail.com</a>
+    <a href="mailto:#">alfrednutile@gmail.com</a></br></br>
+    Alfred Nutile, dba<br>
+    277 Main Street Unit 302B<br>
+    Greenfield, MA 01301
   </address>
 </span>
 <span class="span3">
