--- a/app/views/content/_sites.html.erb
+++ b/app/views/content/_sites.html.erb
@@ -17,6 +17,13 @@
 
 <div class="site">http://americanrepertorytheater.org<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></i></div>
 
+<div class="site">http://www.vtinvasives.org/
+	<i class="halflings-icon cog"></i>
+	<i class="halflings-icon stop"></i>
+	<i class="halflings-icon star"></i>
+	<i class="halflings-icon certificate"></i>
+</div>
+
 <div class="site">http://alfrednutile.info<i class="halflings-icon star"></i><i class="halflings-icon leaf"></i><i class="halflings-icon eye-open"></i><i class="halflings-icon certificate"></i></i></div>
 
 <div class="site">http://burnesscommunications.com<i class="halflings-icon cog"></i><i class="halflings-icon leaf"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></i></div>
