--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -14,7 +14,7 @@
       <h3>More info</h3>
       <h4>Resume</h4>
       <p>
-        <i class="halflings-icon white user"></i><a href="https://dl.dropboxusercontent.com/54803135/Resume.pdf" target="_blank">PDF Here</a></br>
+        <i class="halflings-icon white user"></i><a href="https://dl.dropboxusercontent.com/u/54803135/Resume.pdf" target="_blank">PDF Here</a></br>
         <i class="halflings-icon white user"></i><a href="https://dl.dropboxusercontent.com/u/54803135/Resume.doc" target="_blank">DOC Here</a>
       </p>
 </span>
