--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -2960,6 +2960,31 @@ a.buy:hover {
 }
 
 
+#php-circle {
+	background-color: #596AA1;
+	background-image: url("php.png");
+	background-size: 119%;
+	background-repeat: no-repeat;
+	background-position: -13px 28px;
+}
+
+#php-circle {
+	background-color: #596AA1;
+	background-image: url("php.png");
+	background-size: 119%;
+	background-repeat: no-repeat;
+	background-position: -13px 28px;
+}
+
+#jquery-circle {
+	background-color: #fff;
+	background-image: url("jquery-logo.gif");
+	background-size: 123%;
+	background-repeat: no-repeat;
+	background-position: -17px 29px;
+}
+
+
 #gplus-circle {
  background-color: #D97E7E;
  background-image: url('gplus.jpg');
