--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -13,6 +13,8 @@
             <a href="http://alfrednutile.info/tags/rails"><span id="rails-circle" class="span3"></span></a>
             <a href="http://angularjs.org"><span id="angular-circle" class="span3"></span></a>
             <a href="/posts"><span id="blog-circle" class="span3"><p>Blog</p></span></a>
+             <a href="http://alfrednutile.info/tags/jquery"><span id="jquery-circle" class="span3"></span></a>
+             <a href="http://alfrednutile.info/tags/php"><span id="php-circle" class="span3"></span></a>
             <a href="https://plus.google.com/113385596438431897721/posts"><span id="gplus-circle" class="span3"></span></a>
             <a href="http://www.linkedin.com/in/alfrednutile"><span id="linkedin-circle" class="span3"></span></a>
             <a href="https://kindle.amazon.com/profile/Alfred-E--Nutile/2827195"><span id="amazon-circle" class="span3"></span></a>
