--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Alfred Nutile::Developer[JavaScript, jQuery, Rails, PHP, Angular, Drupal] | <%= yield(:title) %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= javascript_include_tag "/assets/ckeditor/ckeditor.js" %>
   <%= csrf_meta_tags %>
   <%= favicon_link_tag 'favicon.ico' %>
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
