--- a/app/views/projects/_projects-bottom.html.erb
+++ b/app/views/projects/_projects-bottom.html.erb
@@ -9,7 +9,7 @@
                  path_large = "https://s3-us-west-2.amazonaws.com/nutilesblog/medium/#{id}/medium/"
                  image = project.photo.to_s.split('/').last
               %>
-                <%= link_to image_tag("#{path_medium}#{image})"), project_path(project.id), :class => "image proj-#{project.id}", :data => { :url => "#{path_large}#{image})" } %>
+                <%= link_to image_tag("#{path_medium}#{image}"), project_path(project.id), :class => "image proj-#{project.id}", :data => { :url => "#{path_large}#{image}" } %>
               <% else %>
                 <%= link_to image_tag(project.photo.url(:medium)), project_path(project.id), :class => "image proj-#{project.id}", :data => { :url => project.photo.url(:large) } %>
               <% end %>
