--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -9,4 +9,25 @@
     overflow: hidden;
     height: 400px;
   }
+  .description p {
+    font-family: 'Droid Sans', sans-serif;
+    font-weight: 400;
+    color: #707070;
+    font-size: 13px;
+    line-height: 14px;
+  }
+
+
+}
+
+#slide1 {
+  h4 {
+    font-size: 28px;
+    color: #5E5B5B;
+  }
+  p {
+    font-size:22px;
+    line-height: 23px;
+    color: #5E5B5B;
+  }
 }
