Remove content sweeper for now

--- a/app/views/content/support_plans.html.erb
+++ b/app/views/content/support_plans.html.erb
@@ -1,4 +1,5 @@
-<div id='page-title'>
+<% cache do %>
+    <div id='page-title'>
   <h2>Support Plans</h2>
 </div>
 
@@ -148,3 +149,4 @@ For example if you have 4 hours remaining for quarter 1 and you enter quarter 2 
 		</div>
 	</div>
 </div>
+<% end %>
