--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -1,4 +1,5 @@
-<div id='page-title'>
+<% cache do %>
+    <div id='page-title'>
   <h2>Alfred Nutile</h2>
 </div>
   <div id="wrapper" class="full">
@@ -32,3 +33,4 @@
   </div>
 
 </div>
+<% end %>
