Add logos to the home page

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -3000,6 +3000,22 @@ a.buy:hover {
  background-repeat: no-repeat;
 }
 
+#behat-circle {
+ background-color: #D8D8D8;
+ background-image: url('behat-circle.png');
+ background-size: 123%;
+ background-position: -13px 35px;
+ background-repeat: no-repeat;
+}
+
+#laravel-circle {
+ background-color: #3F3F3F;
+ background-image: url('laravel_circle.png');
+ background-size: 100%;
+ background-position: 0px 10px;
+ background-repeat: no-repeat;
+}
+
 #hfc-circle {
  background-color: #D97E7E;
  background-image: url('hfc-circle.png');
