--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Alfred Nutile::Developer[JavaScript, jQuery, Rails, PHP, Angular, Drupal] | <%= yield(:title) %></title>
+  <title>Alfred Nutile::Developer[JavaScript, Rails, PHP, Laravel, Angular, Drupal] | <%= yield(:title) %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag '/assets/ckeditor/ckeditor.js' %>
   <%= csrf_meta_tag unless @page_caching %>
