--- a/app/views/content/_sites.html.erb
+++ b/app/views/content/_sites.html.erb
@@ -1,5 +1,9 @@
 <div class="site">http://www.alfrednutile.info/projects/44<i class="halflings-icon star"></i><i class="halflings-icon leaf"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon user"></i></div>
 
+<div class="site">http://staging.basurvey.com/<i class="halflings-icon star"></i><i class="halflings-icon leaf"></i><i class="halflings-icon eye-open"></i><i class="halflings-icon certificate"></i><i class="halflings-icon user"></i></div>
+
+<div class="site">http://www.pse.umass.edu/<i class="halflings-icon cog"></i><i class="halflings-icon leaf"></i></div>
+
 <div class="site">http://www.campusservices.harvard.edu<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
 
 <div class="site-ignore"><a class="fiber" href="/posts/4">javascript</a><i class="halflings-icon star"></i><i class="halflings-icon leaf"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon user"></i></div>
