--- a/app/views/content/_sites.html.erb
+++ b/app/views/content/_sites.html.erb
@@ -6,7 +6,7 @@
 
 <div class="site">http://www.campusservices.harvard.edu<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
 
-<div class="site-ignore"><a class="fiber" href="/posts/4">javascript</a><i class="halflings-icon star"></i><i class="halflings-icon leaf"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon user"></i></div>
+<div class="site-ignore"><a class="fiber" href="/posts/4">javascript example</a><i class="halflings-icon star"></i><i class="halflings-icon leaf"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon user"></i></div>
 
 <div class="site">http://activelivingresearch.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
 
@@ -50,7 +50,7 @@
 
 <div class="site">http://www.myersinfosys.com<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
 
-<div class="site-ignore"><a class="broma" href="/posts/17">broma</a><i class="halflings-icon cog"></i><i class="halflings-icon leaf"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
+<div class="site-ignore"><a class="broma" href="/posts/17">javascript example</a><i class="halflings-icon cog"></i><i class="halflings-icon leaf"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
 
 <div class="site">http://clpp.hampshire.edu/<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon certificate"></i></div>
 
