--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -26,3 +26,43 @@ a.blog-link.active, li.blog-link a:hover {
 	margin-left: 0px;
 	margin-right: 0px;
 }
+
+.post-content ul {
+  list-style: inherit;
+  margin: 0 0 0 33px
+}
+
+.highlight {
+  margin: 10px 0 10px 0;
+  pre {
+    background-color:#eee;
+    overflow:auto;
+    margin:0 0 1em;
+    padding:.5em 1em;
+  }
+
+  pre code,
+  pre .line-number {
+    /* Ukuran line-height antara teks di dalam tag <code> dan <span class="line-number"> harus sama! */
+    font:normal normal 12px/14px "Courier New",Courier,Monospace;
+    color:black;
+    display:block;
+  }
+
+  pre .line-number {
+    float:left;
+    margin:0 1em 0 -1em;
+    border-right:1px solid;
+    text-align:right;
+  }
+
+  pre .line-number span {
+    display:block;
+    padding: 2px .5em 3px 1em;
+  }
+
+  pre .cl {
+    display:block;
+    clear:both;
+  }
+}
